<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.phanv.mydiary.Activity.WriteDiaryActivity">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:fontFamily="casual"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        tools:ignore="InvalidId"
        tools:fontFamily="casual"
        android:background="@drawable/edittext"/>
    <EditText
            android:id="@+id/edDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="150dp"
            android:maxHeight="250dp"
            android:hint="@string/detail"
            android:gravity="top"
            tools:fontFamily="casual"
            android:background="@drawable/edittext"
        />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/rtFavorite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgDiary"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:src="@drawable/addimg"/>

        <Button
            android:id="@+id/btSave"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/btSave"
            android:textColor="?android:attr/textColorLink"
            tools:fontFamily="casual" />
    </LinearLayout>
</LinearLayout>
