<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.phanv.mydiary.Activity.ViewDiary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:fontFamily="casual"
        android:text="Ngay"
        android:textSize="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <RatingBar
        android:id="@+id/rtFavoriteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:attr/ratingBarStyleSmall"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btEdit"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/btEdit"
            android:textColor="?android:attr/textColorLink"
            tools:fontFamily="casual" />

        <Button
            android:id="@+id/btDel"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/btDel"
            android:textColor="?android:attr/textColorLink"
            tools:fontFamily="casual" />

        <Button
            android:id="@+id/btHome"
            style="@android:style/Widget.Button"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/btHome"
            android:textColor="?android:attr/textColorLink"
            tools:fontFamily="casual" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_weight="1"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:text="Tiêu de"
                android:textColorLink="@android:color/holo_orange_light"
                android:textSize="20dp"
                tools:fontFamily="casual" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>
